Fixed dark mode color theme

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     :root {
-        --background: 0 100% 50%;
+        --background: 0 0% 100%;
         --foreground: 0 0% 3.9%;
 
         --card: 0 0% 100%;
@@ -36,7 +36,7 @@
     }
 
     .dark {
-        --background: 0, 100%, 50%;
+        --background: 220, 8%, 23%;
         --foreground: 0, 100%, 50%;
 
         --card: 0 0% 3.9%;
